--- a/style.css
+++ b/style.css
@@ -1,19 +1,68 @@
-#AppMockup{
-	padding: 24px;
+body{
+	font-family: 'Open Sans', sans-serif;
 }
 
-#AppMockup h1 {
-	font-family: 'Open Sans', sans-serif;
+#Home{
+	padding: 5vw;
+}
+
+#Home h1 {
 	color: #58506b;
 	font-style: normal;
 	font-size: 50px;
 	line-height: 25px; 	
 }
 
-#AppMockup nav{
+#Home nav{
+	background-color: white;
 	padding: 25px;
 }
 
-#AppMockup nav #bell{
+#Home nav #bell{
 	height: 65px;
+}
+
+
+/* Invest Card  */
+
+#Home #InvestCard img{
+	float: right;
+	top: -3vh;
+	height: 80%;
+	/* max-height: 0px; */
+	padding-right: 2vh;
+	position: relative;
+}
+#Home #InvestCard{
+	padding-top: 2vh;
+}
+
+#Home #ValueCard{
+	height: 28vh;
+	margin: 1vw;
+	color: white;
+	background: linear-gradient(180deg, rgba(44, 82, 216, 0) 0%, rgba(44, 82, 216, 0.4) 100%), #54D1ED;
+	background-blend-mode: multiply, normal;
+	/* Card shadow 1 */
+	box-shadow: 0px 8px 20px rgba(197, 166, 236, 0.05);
+	border-radius: 50px;
+	padding: 10% 5% 10% ; /*Top Right Buttom left */
+}
+#Home #Value{
+	position: absolute;
+	bottom: 10%;
+}
+
+#Home #ValueCard #ValueProfile{
+	font-size: 50px;
+} 
+
+
+#Home #ValueCard #ValueAmount{
+	font-size: 90px;
+}
+
+#ValueCard .ValueTitle{
+	font-size: 40px;
+	font-weight: bold;
 }
