--- a/styles/style.css
+++ b/styles/style.css
@@ -1,133 +1,203 @@
 /* General Styles */
-:root{
+:root {
   --border-of-cards: 50px;
-  --general-padding: 7% 5% ; /*Top Right Buttom left */;
+  --general-padding: 7% 5%; /*Top Right Buttom left */
+  --menu-height: 11vh;
+  --color-success: #41CF69;
 }
 
-
-body{
-	font-family: 'Open Sans', sans-serif;
-	/* Change temporaly for development process */
-	background-color: black;
-	color: #58506b;
+body {
+  font-family: "Open Sans", sans-serif;
+  /* Change temporaly for development process */
+  background-color: black;
+  color: #58506b;
 }
 
-#Home{
-	padding: 6vw;
+#Home {
+  padding: 6vw 6vw var(--menu-height) 6vw;
 }
 
-.generalCard{
-	border-radius: var(--border-of-cards);
-	padding: var(--general-padding);
-	margin-top: 2vh;
-	margin-bottom: 2vh;
+.generalCard {
+  border-radius: var(--border-of-cards);
+  padding: var(--general-padding);
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+}
+
+.flipped {
+    transform: scaleX(-1);
+    -moz-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    -ms-transform: scaleX(-1);
 }
 
 /* ********************* */
 
 #Home h1 {
-	font-style: normal;
-	font-size: 50px;
-	line-height: 25px; 	
+  font-style: normal;
+  font-size: 50px;
+  line-height: 25px;
 }
 
-#Home nav{
-	padding: 25px;
+#Home nav {
+  padding: 25px;
 }
 
-#Home nav .icon{
-	height: 58px;
+#Home nav .icon {
+  height: 58px;
 }
-
 
 /* Invest Card  */
 
-#Home #InvestCard img{
-	float: right;
-	top: -3vh;
-	height: 80%;
-	/* max-height: 0px; */
-	padding-right: 2vh;
-	position: relative;
+#Home #InvestCard img {
+  float: right;
+  top: -3vh;
+  height: 80%;
+  /* max-height: 0px; */
+  padding-right: 2vh;
+  position: relative;
 }
 #Home #InvestCard {
-
-	padding: 0;
+  padding: 0;
 }
 
-#Home #ValueCard{
-	height: 28vh;
-	color: white;
-	background: linear-gradient(180deg, rgba(44, 82, 216, 0) 0%, rgba(44, 82, 216, 0.4) 100%), #54D1ED;
-	background-blend-mode: multiply, normal;
-	/* Card shadow 1 */
-	box-shadow: 0px 8px 20px rgba(197, 166, 236, 0.05);	border-radius: var(--border-of-cards);
-	padding: 10% 5% 10% ; /*Top Right Buttom left */
+#Home #ValueCard {
+  height: 28vh;
+  color: white;
+  background: linear-gradient(
+      180deg,
+      rgba(44, 82, 216, 0) 0%,
+      rgba(44, 82, 216, 0.4) 100%
+    ),
+    #54d1ed;
+  background-blend-mode: multiply, normal;
+  /* Card shadow 1 */
+  box-shadow: 0px 8px 20px rgba(197, 166, 236, 0.05);
+  border-radius: var(--border-of-cards);
+  padding: 10% 5% 10%; /*Top Right Buttom left */
 }
-#Home #Value{
-	position: absolute;
-	bottom: 10%;
-}
-
-#Home #ValueCard #ValueProfile{
-	font-size: 50px;
-} 
-
-
-#Home #ValueCard #ValueAmount{
-	font-size: 90px;
+#Home #Value {
+  position: absolute;
+  bottom: 10%;
 }
 
-#ValueCard .ValueTitle{
-	font-size: 40px;
-	font-weight: bold;
+#Home #ValueCard #ValueProfile {
+  font-size: 50px;
 }
 
+#Home #ValueCard #ValueAmount {
+  font-size: 90px;
+}
+
+#ValueCard .ValueTitle {
+  font-size: 40px;
+  font-weight: bold;
+}
 
 /* Invest Summary */
-#InvestSummary{
-	background-color: white;
-	display: block;
-	font-size: 40px;
-	border-radius: var(--border-of-cards);
-	/* padding: 7% 5%; */ /*Top Right Buttom left*/
+#InvestSummary {
+  background-color: white;
+  display: block;
+  font-size: 40px;
+  border-radius: var(--border-of-cards);
+  /* padding: 7% 5%; */ /*Top Right Buttom left*/
 }
 
 /* Goals Cards */
 
-#goals .card{
-	border: none;
-	/* padding: 7% 5% ; Top Right Buttom left; */
+#goals .card {
+  border: none;
+  margin-left: 1.5vw;
+  margin-right: 1.5vw;
+  /* padding: 7% 5% ; Top Right Buttom left; */
 }
 
-#goals .card img{
-	width: 20%;
+#goals .card img {
+  width: 20%;
 }
 
-#goals .card .card-body{
-	font-size: 40px;
+#goals .card .card-body {
+  font-size: 40px;
 }
 
 /*Portfolio*/
-#portfolioTitle .badge{
-	font-size: 25px;
-	background-color:#E4FFEE;
+#portfolioTitle .badge {
+  font-size: 25px;
+  background-color: #e4ffee;
 }
 
-#portfolioTitle .badge-success{
-	/* Success Soft */
-	background: #E4FFEE;
-	/* Success */
-	border: 0.5px solid #41CF69;
-	box-sizing: border-box;
-	border-radius: 10px;
-	padding: 10px 1px 10px 4px ;
-	color: #41CF69;
+#portfolioTitle .badge-success {
+  /* Success Soft */
+  background: #e4ffee;
+  /* Success */
+  width: 170px;
+  border: 0.5px solid var(--color-success);
+  box-sizing: border-box;
+  border-radius: 20px;
+  padding: 10px;
+  color: var(--color-success);
 }
 
 /* View Of Portfolio */
 
-#portfolioView{
-	border-radius: var(--border-of-cards);
-	background-color: white;
+#portfolioView {
+  border-radius: var(--border-of-cards);
+  background-color: white;
+}
+
+#portfolioView p {
+  font-size: 30px;
+}
+
+#portfolioView #HoldingDescription img {
+  height: 45px;
+}
+
+#portfolioView #HoldingDescription .badge {
+  font-size: 30px;
+  line-height: 100%;
+  border-radius: 15px;
+  float: right;
+}
+
+#portfolioView #HoldingDescription .badge-success {
+	background-color: var(--color-success);
+	color: white;
+	padding-left: 30px;
+	padding-right: 30px;
+}
+#portfolioView #HoldingDescription{
+	letter-spacing: -0.03em;
+}
+
+#portfolioView #HoldingDescription .caption1{
+	font-size: 35px;
+	line-height: 45px;
+}
+
+#portfolioView #HoldingDescription .menu2{
+	font-size: 30px;
+	line-height: 40px;
+	font-weight: bold;
+	color: var(--color-success); /*This color is Success*/
+}
+
+
+/*Controls Of PortfolioView HoldingDescription*/
+#portfolioView #HoldingDescription a {
+	text-decoration: none;
+	display: inline-block;
+	height: 30px; 
+}
+  
+#portfolioView #HoldingDescription a:hover {
+	background-color: #ddd;
+	color: black;
+}
+
+#portfolioView #HoldingDescription #controls{
+	height: 60px;
+}
+#portfolioView #HoldingDescription #controls img{
+	height: 30px;
 }
