--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
   --border-of-cards: 50px;
   --general-padding: 7% 5%; /*Top Right Buttom left */
   --menu-height: 11vh;
+  /*Colors*/
   --color-success: #41CF69;
 }
 
