--- a/styles/style.css
+++ b/styles/style.css
@@ -9,8 +9,7 @@
 
 body {
   font-family: "Open Sans", sans-serif;
-  /* Change temporaly for development process */
-  background-color: black;
+  background-color: #F8F8FC;
   color: #58506b;
 }
 
@@ -42,7 +41,7 @@ h1{
 #Home h1 {
   font-style: normal;
   font-size: 50px;
-  line-height: 25px;
+  /* line-height: 25px; */
 }
 
 #Home nav {
@@ -59,6 +58,7 @@ h1{
   float: right;
   top: -3vh;
   height: 80%;
+  max-height: 300px;
   /* max-height: 0px; */
   padding-right: 2vh;
   position: relative;
@@ -68,7 +68,7 @@ h1{
 }
 
 #Home #ValueCard {
-  height: 28vh;
+
   color: white;
   background: linear-gradient(
       180deg,
@@ -82,8 +82,9 @@ h1{
   border-radius: var(--border-of-cards);
   padding: 10% 5% 10%; /*Top Right Buttom left */
 }
+
 #Home #Value {
-  position: absolute;
+  /* position: absolute; */
   bottom: 10%;
 }
 
@@ -107,6 +108,7 @@ h1{
   display: block;
   font-size: 40px;
   border-radius: var(--border-of-cards);
+
   /* padding: 7% 5%; */ /*Top Right Buttom left*/
 }
 
@@ -114,8 +116,8 @@ h1{
 
 #goals .card {
   border: none;
-  margin-left: 1.5vw;
-  margin-right: 1.5vw;
+  /* margin-left: 1.5vw;
+  margin-right: 1.5vw; */
   /* padding: 7% 5% ; Top Right Buttom left; */
 }
 
@@ -187,7 +189,7 @@ h1{
 
 .caption2{
   font-weight: bold;
-  font-size: 35px;
+  font-size: 30px;
   line-height: 35px;
   letter-spacing: -0.03em;
   background: linear-gradient(to bottom, rgba(44, 82, 216, 0.4) 0%, #2C52D8 100%);
@@ -243,6 +245,11 @@ h1{
 	font-size: 30px;
   line-height: 30px;
   font-weight: normal ;
+}
+
+#goals .menu1{
+	font-size: 26px;
+  line-height: 30px;
 }
 
 #Home #blog ul h5{
